# hecquin

./: .gitignore  CMakeLists.txt  adb_screencap.cpp  adb_screencap.hpp  click_button.cpp  detect_buttons.cpp  dev.sh  extract_buttons.cpp  preprocess_buttons.cpp
dashboard/: .env.example  .gitignore  README.md  pyproject.toml
dashboard/scripts/: gen_self_signed_cert.sh  run_dev.sh  run_prod.sh
dashboard/scripts/systemd/: hecquin-dashboard.service
dashboard/src/hecquin_dashboard/: __init__.py  config.py  db.py  main.py
dashboard/tests/: conftest.py  test_api.py  test_repositories.py  test_services.py
sound/: .clang-format  .clang-tidy  ARCHITECTURE.md  Action.hpp  CMakeLists.txt  CMakePresets.json  CommandProcessor.cpp  CommandProcessor.hpp  IMPROVEMENT_PLAN.md  README.md  SEQUENCE_DIAGRAMS.md  UX_FLOW.md  config.env.example  dev.sh  text_to_speech.cpp  voice_detector.cpp
sound/cmake/: adhoc_codesign.cmake  dependency_libraries.cmake  deps_curl.cmake  deps_json.cmake  deps_onnxruntime.cmake  deps_piper.cmake  deps_sdl2.cmake  deps_sqlite_vec.cmake  deps_whisper.cmake  english_tutor.cmake  piper_speech.cmake  project_options.cmake  pronunciation_drill.cmake  sound_common.cmake  sound_libs.cmake  sound_tests.cmake  targets.cmake  text_to_speech.cmake  voice_to_text.cmake
sound/scripts/: _fc_test.sh  _lib.sh  dev_piper.sh  dev_project.sh  dev_pronunciation.sh  dev_whisper.sh  fetch_curriculum.sh  install_build_all.sh  pre-commit.sh
sound/src/: README.md
sound/src/actions/: Action.hpp  ActionKind.hpp  DeviceAction.hpp  ExternalApiAction.hpp  GrammarCorrectionAction.hpp  MusicAction.hpp  NoneAction.hpp  PronunciationFeedbackAction.hpp  README.md  SystemAction.hpp  TopicSearchAction.hpp
sound/src/ai/: Action.hpp  ChatClient.cpp  ChatClient.hpp  CommandProcessor.cpp  CommandProcessor.hpp  HttpClient.cpp  HttpClient.hpp  HttpReplyBuckets.cpp  HttpReplyBuckets.hpp  IHttpClient.hpp  LocalIntentMatcher.cpp  LocalIntentMatcher.hpp  LoggingHttpClient.cpp  LoggingHttpClient.hpp  OpenAiChatContent.cpp  OpenAiChatContent.hpp  README.md  RetryingHttpClient.cpp  RetryingHttpClient.hpp
sound/src/cli/: DefaultPaths.hpp  README.md  TextToSpeech.cpp
sound/src/common/: EnvParse.hpp  PathUtils.hpp  README.md  ShellEscape.hpp  StringUtils.hpp  Subprocess.cpp  Subprocess.hpp  Utf8.hpp
sound/src/config/: AppConfig.cpp  AppConfig.hpp  ConfigStore.cpp  ConfigStore.hpp  README.md
sound/src/learning/: EmbeddingClient.cpp  EmbeddingClient.hpp  EnglishTutorProcessor.cpp  EnglishTutorProcessor.hpp  Ingestor.cpp  Ingestor.hpp  LearningStore.cpp  LearningStore.hpp  LearningStoreApiCalls.cpp  LearningStoreDocuments.cpp  LearningStoreMigrations.cpp  LearningStorePronunciation.cpp  LearningStoreSessions.cpp  LearningStoreVectorSearch.cpp  ProgressTracker.cpp  ProgressTracker.hpp  PronunciationDrillProcessor.cpp  PronunciationDrillProcessor.hpp  README.md  RetrievalService.cpp  RetrievalService.hpp  TextChunker.cpp  TextChunker.hpp  Vocabulary.cpp  Vocabulary.hpp
sound/src/music/: MusicFactory.cpp  MusicFactory.hpp  MusicProvider.hpp  MusicSession.cpp  MusicSession.hpp  README.md  YouTubeMusicProvider.cpp  YouTubeMusicProvider.hpp
sound/src/observability/: Log.hpp  README.md
sound/src/tts/: PiperSampleRate.hpp  PiperSpeech.cpp  PiperSpeech.hpp  PlayPipeline.cpp  PlayPipeline.hpp  README.md
sound/src/voice/: ActionSideEffectRegistry.cpp  ActionSideEffectRegistry.hpp  AudioBargeInController.cpp  AudioBargeInController.hpp  AudioCapture.cpp  AudioCapture.hpp  AudioCaptureConfig.hpp  CapabilityReport.cpp  CapabilityReport.hpp  Earcons.cpp  Earcons.hpp  ListenerMode.hpp  ModeIndicator.cpp  ModeIndicator.hpp  MusicSideEffects.cpp  MusicSideEffects.hpp  MusicWiring.cpp  MusicWiring.hpp  NoiseFloorTracker.cpp  NoiseFloorTracker.hpp  PipelineEvent.hpp  PipelineTelemetry.cpp  PipelineTelemetry.hpp  PrewarmService.cpp  PrewarmService.hpp  README.md  SecondaryVadGate.cpp  SecondaryVadGate.hpp  ThinkingScheduler.cpp  ThinkingScheduler.hpp  TtsResponsePlayer.cpp  TtsResponsePlayer.hpp  UtteranceCollector.cpp  UtteranceCollector.hpp  UtteranceRouter.cpp  UtteranceRouter.hpp  VoiceApp.cpp  VoiceApp.hpp  VoiceDetector.cpp  VoiceListener.cpp  (+9 more)
sound/tests/: test_config_store.cpp  test_content_fingerprint.cpp  test_drill_reference_audio_lru.cpp  test_embedding_client_json.cpp  test_learning_store.cpp  test_local_intent_matcher.cpp  test_music_session.cpp  test_pitch_tracker.cpp  test_pronunciation_drill.cpp  test_pronunciation_scorer.cpp  test_retrying_http.cpp  test_text_chunker.cpp  test_utterance_router.cpp
sound/tests/ai/: test_chat_client_cooldown.cpp  test_command_processor.cpp  test_local_intent_matcher.cpp  test_openai_chat_content.cpp  test_retrying_http.cpp
sound/ux-flow/: COLLABORATORS.md  DIAGRAMS.md  README.md  SEQUENCE_DIAGRAMS.md
vision/: CMakeLists.txt  dev.sh
(+206 files in other folders)
