[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hecquin-dashboard"
version = "0.1.0"
description = "HTTPS dashboard for Hecquin learning data + API call telemetry, running on Raspberry Pi."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hecquin" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
hecquin-dashboard = "hecquin_dashboard.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hecquin_dashboard = [
    "templates/**/*.html",
    "static/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008: `Depends(...)` and `Query(...)` in default args are idiomatic FastAPI.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
